--- a/index.html
+++ b/index.html
@@ -1,31 +1,49 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>System & Flow — PM tools that feel simple</title>
-  <link rel="stylesheet" href="/styles.css" />
-  <meta name="description" content="System & Flow: lightweight AI tools for project managers." />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>System & Flow</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #0d1117;
+      color: white;
+      text-align: center;
+    }
+    header {
+      padding: 40px;
+    }
+    img {
+      width: 200px;
+    }
+    h1 {
+      margin-top: 20px;
+      font-size: 2.5rem;
+      color: #c67a3f;
+    }
+    nav {
+      margin-top: 30px;
+    }
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #c67a3f;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <main class="container hero">
-    <h1>System &amp; Flow</h1>
-    <p class="sub">PM tools that feel simple.</p>
-    <div class="cta">
-      <a class="btn primary" href="https://app.systemnflow.com">Open the App</a>
-      <a class="btn" href="#features">Features</a>
-    </div>
-  </main>
-
-  <section id="features" class="container grid">
-    <div class="card"><h3>Transcript Analyzer</h3><p>Extract Actions, Risks, Decisions instantly.</p></div>
-    <div class="card"><h3>Status Generator</h3><p>One‑page executive update in minutes.</p></div>
-    <div class="card"><h3>Risk Radar</h3><p>Surface top risks and mitigations automatically.</p></div>
-  </section>
-
-  <footer class="container footer">
-    <small>© <span id="y"></span> System & Flow</small>
-  </footer>
-  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
+  <header>
+    <img src="SNF_logo.png" alt="System & Flow Logo">
+    <h1>System & Flow</h1>
+    <p>Simplifying Project Management, One App at a Time</p>
+    <nav>
+      <a href="apps.html">Apps</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
 </body>
 </html>
