--- a/index.html
+++ b/index.html
@@ -1,49 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>System & Flow</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #0d1117;
-      color: white;
-      text-align: center;
-    }
-    header {
-      padding: 40px;
-    }
-    img {
-      width: 200px;
-    }
-    h1 {
-      margin-top: 20px;
-      font-size: 2.5rem;
-      color: #c67a3f;
-    }
-    nav {
-      margin-top: 30px;
-    }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: #c67a3f;
-      font-weight: bold;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>System & Flow</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <img src="SNF_logo.png" alt="System & Flow Logo">
-    <h1>System & Flow</h1>
-    <p>Simplifying Project Management, One App at a Time</p>
-    <nav>
-      <a href="apps.html">Apps</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
+    <!-- Header with Logo + Navigation -->
+    <header>
+        <a href="index.html">
+            <img src="SNF_logo.png" alt="System & Flow Logo" class="logo">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="apps.html">Apps</a>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+        <section>
+            <h1>Welcome to System & Flow</h1>
+            <p>Your tools for streamlined project management, automation, and SaaS innovation.</p>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 System & Flow. All rights reserved.</p>
+    </footer>
 </body>
 </html>
