--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>System & Flow — Project Management. Simplified.</title>
   <meta name="description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
-  <link rel="icon" href="/favicon.ico" />
   <link rel="stylesheet" href="/styles.css" />
 </head>
 <body class="dark">
-  <!-- Header -->
+  <!-- Header / Navbar -->
   <header class="wrap header">
     <div class="brand">
-      <img src="/SNF_logo.png" alt="System & Flow logo" class="logo-sm" />
+      <!-- ICON only (top-left) -->
+      <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
       <span>System &amp; Flow</span>
     </div>
     <nav class="nav">
@@ -24,7 +24,8 @@
 
   <!-- Hero -->
   <main class="wrap hero">
-    <img src="/SNF_logo.png" alt="System & Flow logo" class="logo-hero" />
+    <!-- FULL LOGO centered -->
+    <img src="/SNF_logo.png" alt="System & Flow full logo" class="logo-hero" />
     <h1>Project Management.<br/>Simplified.</h1>
     <div class="cta">
       <a class="btn primary" href="/apps.html">Explore Tools</a>
@@ -42,14 +43,12 @@
       <p>All‑in‑one project ops dashboard.</p>
       <a class="btn ghost" href="/apps.html">Learn More</a>
     </div>
-
     <div class="card">
       <div class="card-icon">⭐</div>
       <h3>AI Prompt Pack</h3>
       <p>50 smart prompts to boost productivity.</p>
       <a class="btn ghost" href="/apps.html">Learn More</a>
     </div>
-
     <div class="card">
       <div class="card-icon">🗂️</div>
       <h3>Client &amp; Project Portal</h3>
@@ -60,9 +59,7 @@
 
   <!-- Footer -->
   <footer class="wrap footer">
-    <div class="foot-left">
-      <small>© <span id="y"></span> System &amp; Flow</small>
-    </div>
+    <small>© <span id="y"></span> System &amp; Flow</small>
     <div class="foot-right">
       <a href="https://www.instagram.com/systemnflow" target="_blank" rel="noopener">Instagram</a>
       <a href="https://www.tiktok.com/@systemnflow" target="_blank" rel="noopener">TikTok</a>
