--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   <link rel="stylesheet" href="/styles.css" />
 </head>
 <body class="dark">
-  <!-- Header / Navbar -->
-  <header class="wrap header">
-    <div class="brand">
-      <!-- ICON only (top-left) -->
-      <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
-      <span>System &amp; Flow</span>
-    </div>
-    <nav class="nav">
-      <a href="/">Home</a>
-      <a href="/apps.html">Apps</a>
-      <a href="mailto:info@systemnflow.com">Contact</a>
-    </nav>
-  </header>
+ <!-- Header / Navbar -->
+<header class="wrap header">
+  <div class="brand">
+    <!-- small ICON at top-left -->
+    <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+    <span class="brand-name">System &amp; Flow</span>
+  </div>
+  <nav class="nav">
+    <a href="/">Home</a>
+    <a href="/apps.html">Apps</a>
+    <a href="mailto:info@systemnflow.com">Contact</a>
+  </nav>
+</header>
 
   <!-- Hero -->
   <main class="wrap hero">
