--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <nav class="nav">
     <a href="/">Home</a>
     <a href="/apps.html">Apps</a>
-    <a href="mailto:info@systemnflow.com">Contact</a>
+    <a href="/contact.html">Contact</a>
   </nav>
 </header>
 
