--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html lang="en"><head>
   <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>404 — System & Flow</title><link rel="stylesheet" href="/styles.css"/>
+  <link rel="icon" href="/favicon.ico" />
 </head>
 <body class="dark">
   <main class="wrap hero" style="padding:80px 20px">
