--- a/apps.html
+++ b/apps.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Apps — System & Flow</title>
   <link rel="stylesheet" href="/styles.css" />
+  <link rel="icon" href="/favicon.ico" />
 </head>
 <body class="dark">
   <!-- Header / Navbar (same as home) -->
