--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>System & Flow — Project Management. Simplified.</title>
   <meta name="description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
   <link rel="stylesheet" href="/styles.css" />
+  <link rel="icon" href="/favicon.ico" />
 </head>
 <body class="dark">
  <!-- Header / Navbar -->
