--- a/index.html
+++ b/index.html
@@ -74,23 +74,21 @@
 </section>
 
   <!-- Footer -->
-<!-- Footer (minimal) -->
 <footer class="wrap footer-min">
   <div class="foot-left">
     <img src="/logo.png" alt="System & Flow" class="logo-icon" />
     <span class="brand">System &amp; Flow</span>
   </div>
   <div class="foot-right">
-    <a href="https://www.instagram.com/systemnflow" target="_blank" rel="noopener">Instagram</a>
-    <a href="https://www.tiktok.com/@systemnflow" target="_blank" rel="noopener">TikTok</a>
-    <a href="https://www.linkedin.com/company/system-n-flow" target="_blank" rel="noopener">LinkedIn</a>
+    <a href="https://www.instagram.com/systemnflow" target="_blank">Instagram</a>
+    <a href="https://www.tiktok.com/@systemnflow" target="_blank">TikTok</a>
+    <a href="https://www.linkedin.com/company/system-n-flow" target="_blank">LinkedIn</a>
     <span class="divider">•</span>
     <small>© <span id="y"></span> System &amp; Flow</small>
   </div>
 </footer>
 
 <script>
-  // auto year
   document.getElementById('y').textContent = new Date().getFullYear();
 </script>
 
