--- a/index.html
+++ b/index.html
@@ -73,20 +73,10 @@
   </form>
 </section>
 
-  <!-- Footer -->
-<footer class="wrap footer-min">
-  <div class="foot-left">
-    <img src="/logo.png" alt="System & Flow" class="logo-icon" />
-    <span class="brand">System &amp; Flow</span>
-  </div>
-  <div class="foot-right">
-    <a href="https://www.instagram.com/systemnflow" target="_blank">Instagram</a>
-    <a href="https://www.tiktok.com/@systemnflow" target="_blank">TikTok</a>
-    <a href="https://www.linkedin.com/company/system-n-flow" target="_blank">LinkedIn</a>
-    <span class="divider">•</span>
-    <small>© <span id="y"></span> System &amp; Flow</small>
-  </div>
-</footer>
+
+<div data-include="/partials/footer.html"></div>
+<script src="/include.js" defer></script>
+
 
 <script>
   document.getElementById('y').textContent = new Date().getFullYear();
