--- a/contact.html
+++ b/contact.html
@@ -68,14 +68,9 @@
     </form>
   </section>
 
-  <footer class="wrap footer">
-    <small>© <span id="y"></span> System &amp; Flow</small>
-    <div class="foot-right">
-      <a href="https://www.instagram.com/systemnflow" target="_blank" rel="noopener">Instagram</a>
-      <a href="https://www.tiktok.com/@systemnflow" target="_blank" rel="noopener">TikTok</a>
-      <a href="https://www.linkedin.com/company/system-n-flow" target="_blank" rel="noopener">LinkedIn</a>
-    </div>
-  </footer>
+<div data-include="/partials/footer.html"></div>
+<script src="/include.js" defer></script>
+
 
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 </body>
