--- a/404.html
+++ b/404.html
@@ -4,6 +4,10 @@
   <title>404 — System & Flow</title><link rel="stylesheet" href="/styles.css"/>
   <link rel="icon" href="/favicon.ico" />
 </head>
+  
+  <div data-include="/partials/footer.html"></div>
+<script src="/include.js" defer></script>
+
 <body class="dark">
   <main class="wrap hero" style="padding:80px 20px">
     <h1>404 — Page Not Found</h1>
