--- a/thanks.html
+++ b/thanks.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="/styles.css" />
   <link rel="icon" href="/favicon.ico" />
 </head>
+
+  <div data-include="/partials/footer.html"></div>
+<script src="/include.js" defer></script>
+
 <body class="dark">
   <main class="wrap hero" style="padding:80px 20px">
     <h1>You're in ✅</h1>
