--- a/thanks.html
+++ b/thanks.html
@@ -7,18 +7,19 @@
   <link rel="stylesheet" href="/styles.css" />
   <link rel="icon" href="/favicon.ico" />
 </head>
-
-  <div data-include="/partials/footer.html"></div>
-<script src="/include.js" defer></script>
-
 <body class="dark">
-  <main class="wrap hero" style="padding:80px 20px">
-    <h1>You're in ✅</h1>
-    <p class="sub">Thanks for joining. Watch your inbox for specials and launch updates.</p>
-    <div class="cta" style="margin-top:10px">
-      <a class="btn primary" href="/apps.html">Explore Tools</a>
-      <a class="btn ghost" href="/">Back Home</a>
+  <!-- (optional) header include if you add one later -->
+
+  <main class="wrap hero" style="padding:100px 20px;text-align:center">
+    <h1>Thanks! 🎉</h1>
+    <p>We’ve received your submission. We’ll be in touch soon.</p>
+    <div style="margin-top:16px">
+      <a class="btn primary" href="/">Back to home</a>
     </div>
   </main>
+
+  <!-- Global footer -->
+  <div data-include="/partials/footer.html"></div>
+  <script src="/include.js" defer></script>
 </body>
 </html>
