--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
   </section>
 <section class="wrap" style="padding:28px 20px">
- <form action="https://formspree.io/f/mzzvlwqy" method="POST"
+<form id="newsletter-form" action="https://formspree.io/f/mzzvlwqy" method="POST"
       style="display:flex;gap:10px;flex-wrap:wrap;background:var(--panel);
              border:1px solid var(--border);padding:16px;border-radius:14px">
   
@@ -73,13 +73,25 @@
   
   <button class="btn primary" type="submit">Join</button>
 
-  <!-- Honeypot (spam trap) -->
+  <!-- Honeypot -->
   <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
 
   <!-- Optional metadata -->
   <input type="hidden" name="_subject" value="Newsletter signup — systemnflow.com" />
-  <input type="hidden" name="_redirect" value="/thanks.html" />
 </form>
+
+<!-- Success message -->
+<div id="newsletter-success" class="success" style="
+  background:#0f1f14;
+  border:1px solid #1f5d38;
+  color:#c9f1dc;
+  padding:12px;
+  border-radius:10px;
+  margin-top:12px;
+  display:none">
+  ✅ Thanks for joining! Check your inbox soon.
+</div>
+
 
 </section>
 
@@ -89,6 +101,25 @@
 
 
 <script>
+<script>
+document.getElementById("newsletter-form").addEventListener("submit", async function(e) {
+  e.preventDefault(); // stop normal submit
+  const form = e.target;
+  const data = new FormData(form);
+  const response = await fetch(form.action, {
+    method: form.method,
+    body: data,
+    headers: { 'Accept': 'application/json' }
+  });
+
+  if (response.ok) {
+    form.style.display = "none"; // hide form
+    document.getElementById("newsletter-success").style.display = "block"; // show success box
+  } else {
+    alert("Oops! Something went wrong. Please try again.");
+  }
+});
+</script>
 
 </body>
 </html>
