--- a/contact.html
+++ b/contact.html
@@ -37,36 +37,70 @@
   </main>
 
   <section class="wrap form-wrap">
-<form action="https://formspree.io/f/mzzvlwqy" method="POST" class="form">
-  <label for="name">Name</label>
-  <input id="name" type="text" name="name" required />
+<form id="contact-form" action="https://formspree.io/f/mzzvlwqy" method="POST" class="form">
+  <label>Name
+    <input type="text" name="name" required />
+  </label>
 
-  <label for="email">Email</label>
-  <input id="email" type="email" name="email" required />
+  <label>Email
+    <input type="email" name="email" required />
+  </label>
 
-  <label for="message">Message</label>
-  <textarea id="message" name="message" rows="5" required></textarea>
+  <label>Message
+    <textarea name="message" rows="5" required></textarea>
+  </label>
 
   <label style="display:flex;align-items:center;gap:8px;color:var(--muted)">
     <input type="checkbox" name="marketing_consent" />
-    I agree to receive follow‑ups about this inquiry.
+    I agree to receive follow-ups about this inquiry.
   </label>
 
-  <!-- Honeypot (spam trap) -->
+  <!-- Honeypot -->
   <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
 
   <!-- Optional metadata -->
   <input type="hidden" name="_subject" value="New contact — systemnflow.com" />
-  <input type="hidden" name="_redirect" value="/thanks.html" />
 
   <button class="btn primary" type="submit">Send</button>
 </form>
+
+<!-- Success message -->
+<div id="contact-success" class="success" style="
+  background:#0f1f14;
+  border:1px solid #1f5d38;
+  color:#c9f1dc;
+  padding:12px;
+  border-radius:10px;
+  margin-top:12px;
+  display:none">
+  ✅ Thanks for reaching out! We’ll reply soon.
+</div>
+
 
 
   </section>
 
 <div data-include="/partials/footer.html"></div>
 <script src="/include.js" defer></script>
+<script>
+document.getElementById("contact-form").addEventListener("submit", async function(e) {
+  e.preventDefault();
+  const form = e.target;
+  const data = new FormData(form);
+  const response = await fetch(form.action, {
+    method: form.method,
+    body: data,
+    headers: { 'Accept': 'application/json' }
+  });
+
+  if (response.ok) {
+    form.style.display = "none"; // hide form
+    document.getElementById("contact-success").style.display = "block"; // show success box
+  } else {
+    alert("Oops! Something went wrong. Please try again.");
+  }
+});
+</script>
 
 
 </body>
