--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
     <textarea name="message" rows="5" required></textarea>
   </label>
 
-  <label style="display:flex;align-items:center;gap:8px;color:var(--muted)">
+  <label class="consent">
     <input type="checkbox" name="marketing_consent" />
     I agree to receive follow-ups about this inquiry.
   </label>
@@ -61,18 +61,12 @@
   <!-- Optional metadata -->
   <input type="hidden" name="_subject" value="New contact — systemnflow.com" />
 
-  <button class="btn primary" type="submit">Send</button>
+  <div class="actions">
+    <button class="btn primary" type="submit">Send</button>
+  </div>
 </form>
 
-<!-- Success message -->
-<div id="contact-success" class="success" style="
-  background:#0f1f14;
-  border:1px solid #1f5d38;
-  color:#c9f1dc;
-  padding:12px;
-  border-radius:10px;
-  margin-top:12px;
-  display:none">
+<div id="contact-success" class="success">
   ✅ Thanks for reaching out! We’ll reply soon.
 </div>
 
