--- a/index.html
+++ b/index.html
@@ -85,6 +85,29 @@ document.getElementById("newsletter-form").addEventListener("submit", async func
   }
 });
 </script>
+<script>
+  // newsletter async submit → show success without leaving page
+  const nf = document.getElementById("newsletter-form");
+  if (nf) {
+    nf.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const form = e.target;
+      const data = new FormData(form);
+      const resp = await fetch(form.action, {
+        method: form.method,
+        body: data,
+        headers: { 'Accept': 'application/json' }
+      });
+
+      if (resp.ok) {
+        form.style.display = "none";
+        document.getElementById("newsletter-success").style.display = "block";
+      } else {
+        alert("Oops! Something went wrong. Please try again.");
+      }
+    });
+  }
+</script>
 
 </body>
 </html>
