--- a/index.html
+++ b/index.html
@@ -4,110 +4,111 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>System & Flow — Project Management. Simplified.</title>
-  <meta name="description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
+  <meta name="description" content="System & Flow builds toolkits, templates, and mini-apps that make project management easier, faster, and smarter." />
   <link rel="stylesheet" href="/styles.css" />
   <link rel="icon" href="/favicon.ico" />
 </head>
 <body class="dark">
- <!-- Header / Navbar -->
-<header class="wrap header">
-  <div class="brand">
-    <!-- small ICON at top-left -->
-    <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
-    <span class="brand-name">System &amp; Flow</span>
-  </div>
-  <nav class="nav">
-    <a href="/">Home</a>
-    <a href="/apps.html">Apps</a>
-    <a href="/contact.html">Contact</a>
-  </nav>
-</header>
+
+  <!-- Header / Navbar -->
+  <header class="wrap header">
+    <div class="brand">
+      <!-- Logo is now clickable back to home -->
+      <a href="/index.html">
+        <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+      </a>
+      <span class="brand-name">System &amp; Flow</span>
+    </div>
+    <nav class="nav">
+      <a href="/index.html">Home</a>
+      <a href="/apps.html">Apps</a>
+      <a href="/contact.html">Contact</a>
+    </nav>
+  </header>
 
   <!-- Hero -->
   <main class="wrap hero">
-    <!-- FULL LOGO centered -->
     <img src="/SNF_logo.png" alt="System & Flow full logo" class="logo-hero" />
     <h1>Project Management.<br/>Simplified.</h1>
     <div class="cta">
       <a class="btn primary" href="/apps.html">Explore Tools</a>
     </div>
     <p class="sub">
-      System &amp; Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter.
+      System &amp; Flow builds toolkits, templates, and mini-apps that make project management easier, faster, and smarter.
     </p>
-    <!-- Inline, above-the-fold signup -->
-<form id="newsletter-form" action="https://formspree.io/f/mzzvlwqy" method="POST" class="signup-inline">
-  <input class="field" type="email" name="email" required placeholder="Email for early access & updates" />
 
-  <label class="consent">
-    <input type="checkbox" name="marketing_consent" required />
-    I agree to receive emails.
-  </label>
+    <!-- Newsletter inline form -->
+    <section class="signup-inline" style="margin-top:20px;">
+      <form id="newsletter-form" action="https://formspree.io/f/mzzvlwqy" method="POST" class="newsletter-form" style="display:flex;gap:10px;flex-wrap:wrap;justify-content:center;max-width:500px;margin:0 auto;">
+        <input type="email" name="email" required placeholder="Email for specials & updates"
+               style="flex:1;min-width:220px;padding:12px;border-radius:10px;border:1px solid var(--border);background:#0f1726;color:var(--ink)" />
+        <label style="display:flex;align-items:center;gap:8px;color:var(--muted);font-size:14px">
+          <input type="checkbox" name="marketing_consent" required />
+          I agree to receive emails.
+        </label>
+        <button class="btn primary" type="submit">Join</button>
 
-  <button class="btn primary" type="submit">Join</button>
+        <!-- Honeypot -->
+        <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
 
-  <!-- Honeypot -->
-  <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
+        <!-- Metadata -->
+        <input type="hidden" name="_subject" value="Newsletter signup — systemnflow.com" />
+      </form>
 
-  <!-- Optional metadata -->
-  <input type="hidden" name="_subject" value="Newsletter signup — systemnflow.com" />
-</form>
-
-<div id="newsletter-success" class="success" style="display:none;">
-  ✅ Thanks for joining! Check your inbox soon.
-</div>
-
+      <!-- Success message -->
+      <div id="newsletter-success" class="success" style="display:none;text-align:center;margin-top:15px;padding:12px;background:#0f1f14;border:1px solid #1f5d38;color:#c9f1dc;border-radius:10px;">
+        ✅ Thanks for joining! Check your inbox soon.
+      </div>
+    </section>
   </main>
 
   <!-- Cards -->
-  
+  <section class="wrap grid">
+    <div class="card">
+      <div class="card-icon">🖥️</div>
+      <h3>PM Ops Kit</h3>
+      <p>All-in-one project ops dashboard.</p>
+      <a class="btn ghost" href="/apps.html">Learn More</a>
+    </div>
+    <div class="card">
+      <div class="card-icon">⭐</div>
+      <h3>AI Prompt Pack</h3>
+      <p>50 smart prompts to boost productivity.</p>
+      <a class="btn ghost" href="/apps.html">Learn More</a>
+    </div>
+    <div class="card">
+      <div class="card-icon">🗂️</div>
+      <h3>Client &amp; Project Portal</h3>
+      <p>A central hub for client work.</p>
+      <a class="btn ghost" href="/apps.html">Learn More</a>
+    </div>
+  </section>
 
-<div data-include="/partials/footer.html"></div>
-<script src="/include.js" defer></script>
+  <!-- Footer -->
+  <div data-include="/partials/footer.html"></div>
+  <script src="/include.js" defer></script>
 
-
-<script>
-<script>
-document.getElementById("newsletter-form").addEventListener("submit", async function(e) {
-  e.preventDefault(); // stop normal submit
-  const form = e.target;
-  const data = new FormData(form);
-  const response = await fetch(form.action, {
-    method: form.method,
-    body: data,
-    headers: { 'Accept': 'application/json' }
-  });
-
-  if (response.ok) {
-    form.style.display = "none"; // hide form
-    document.getElementById("newsletter-success").style.display = "block"; // show success box
-  } else {
-    alert("Oops! Something went wrong. Please try again.");
-  }
-});
-</script>
-<script>
-  // newsletter async submit → show success without leaving page
-  const nf = document.getElementById("newsletter-form");
-  if (nf) {
-    nf.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const form = e.target;
-      const data = new FormData(form);
-      const resp = await fetch(form.action, {
-        method: form.method,
-        body: data,
-        headers: { 'Accept': 'application/json' }
+  <!-- Newsletter script -->
+  <script>
+    const nf = document.getElementById("newsletter-form");
+    if (nf) {
+      nf.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const form = e.target;
+        const data = new FormData(form);
+        const resp = await fetch(form.action, {
+          method: form.method,
+          body: data,
+          headers: { 'Accept': 'application/json' }
+        });
+        if (resp.ok) {
+          form.style.display = "none";
+          document.getElementById("newsletter-success").style.display = "block";
+        } else {
+          alert("Oops! Something went wrong. Please try again.");
+        }
       });
-
-      if (resp.ok) {
-        form.style.display = "none";
-        document.getElementById("newsletter-success").style.display = "block";
-      } else {
-        alert("Oops! Something went wrong. Please try again.");
-      }
-    });
-  }
-</script>
-
+    }
+  </script>
 </body>
 </html>
