--- a/apps.html
+++ b/apps.html
@@ -4,52 +4,54 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Apps — System & Flow</title>
+  <meta name="description" content="System & Flow mini‑apps for project managers." />
   <link rel="stylesheet" href="/styles.css" />
   <link rel="icon" href="/favicon.ico" />
 </head>
 <body class="dark">
-  <!-- Header / Navbar (same as home) -->
+
+  <!-- Header / Navbar -->
   <header class="wrap header">
     <div class="brand">
-      <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+      <a href="/index.html">
+        <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+      </a>
       <span class="brand-name">System &amp; Flow</span>
     </div>
     <nav class="nav">
-      <a href="/">Home</a>
+      <a href="/index.html">Home</a>
       <a href="/apps.html">Apps</a>
       <a href="/contact.html">Contact</a>
     </nav>
   </header>
 
   <!-- Page intro -->
-  <main class="wrap hero" style="padding:60px 20px 24px">
-    <h1 style="margin:0 0 8px">Apps</h1>
-    <p class="sub" style="margin-top:6px">
-      Start with the free Analyzer, then upgrade when you’re ready.
-    </p>
+  <main class="wrap hero" style="padding:60px 20px 14px">
+    <h1>Apps</h1>
+    <p class="sub">Start with the free Analyzer, then upgrade when you’re ready.</p>
   </main>
 
-  <!-- App grid -->
+  <!-- App cards -->
   <section class="wrap grid">
     <!-- 1) Transcript Analyzer (Free) -->
     <div class="card">
-      <div class="card-icon">📝</div>
+      <div class="card-icon">📄</div>
       <h3>Transcript Analyzer (Free)</h3>
       <p>Extract Actions, Risks, Decisions from meeting notes in seconds.</p>
-      <div class="cta" style="justify-content:flex-start">
-        <a class="btn primary" href="https://app.systemnflow.com" target="_blank" rel="noopener">Open</a>
-        <a class="btn ghost" href="#" target="_blank" rel="noopener">Docs</a>
+      <div class="card-actions">
+        <a class="btn primary" href="#">Open</a>
+        <a class="btn ghost" href="#">Docs</a>
       </div>
     </div>
 
     <!-- 2) Status Report Generator -->
     <div class="card">
-      <div class="card-icon">📄</div>
+      <div class="card-icon">📑</div>
       <h3>Status Report Generator</h3>
       <p>One‑page executive summaries with exports to PDF/Markdown.</p>
-      <div class="cta" style="justify-content:flex-start">
-        <a class="btn primary" href="https://app.systemnflow.com" target="_blank" rel="noopener">Open</a>
-        <a class="btn ghost" href="#" target="_blank" rel="noopener">Learn More</a>
+      <div class="card-actions">
+        <a class="btn primary" href="#">Open</a>
+        <a class="btn ghost" href="#">Learn More</a>
       </div>
     </div>
 
@@ -58,46 +60,26 @@
       <div class="card-icon">⚠️</div>
       <h3>Risk Radar</h3>
       <p>Auto‑surface top risks with suggested mitigations.</p>
-      <div class="cta" style="justify-content:flex-start">
-        <a class="btn primary" href="https://app.systemnflow.com" target="_blank" rel="noopener">Open</a>
-        <a class="btn ghost" href="#" target="_blank" rel="noopener">Learn More</a>
+      <div class="card-actions">
+        <a class="btn primary" href="#">Open</a>
+        <a class="btn ghost" href="#">Learn More</a>
       </div>
     </div>
 
     <!-- 4) Report Mapper -->
     <div class="card">
-      <div class="card-icon">🧩</div>
+      <div class="card-icon">✳️</div>
       <h3>Report Mapper</h3>
       <p>Upload any template; get a fill‑guide mapped to your data.</p>
-      <div class="cta" style="justify-content:flex-start">
-        <a class="btn primary" href="https://app.systemnflow.com" target="_blank" rel="noopener">Open</a>
-        <a class="btn ghost" href="#" target="_blank" rel="noopener">Learn More</a>
+      <div class="card-actions">
+        <a class="btn primary" href="#">Open</a>
+        <a class="btn ghost" href="#">Learn More</a>
       </div>
     </div>
   </section>
-<section class="wrap" style="padding:28px 20px">
-  <form action="https://formspree.io/f/mzzvlwqy" method="POST"
-      style="display:flex;gap:10px;flex-wrap:wrap;background:var(--panel);
-             border:1px solid var(--border);padding:16px;border-radius:14px">
-  <input type="email" name="email" required placeholder="Email for specials & updates"
-         style="flex:1;min-width:220px;padding:12px;border-radius:10px;border:1px solid var(--border);background:#0f1726;color:var(--ink)" />
-  <label style="display:flex;align-items:center;gap:8px;color:var(--muted);font-size:14px">
-    <input type="checkbox" name="marketing_consent" required />
-    I agree to receive emails.
-  </label>
-  <button class="btn primary" type="submit">Join</button>
 
-  <!-- Optional metadata -->
-  <input type="hidden" name="_subject" value="Newsletter signup — systemnflow.com" />
-  <input type="hidden" name="_redirect" value="/thanks.html" />
-</form>
-
-</section>
-
-<div data-include="/partials/footer.html"></div>
-<script src="/include.js" defer></script>
-
-
-  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
+  <!-- Footer -->
+  <div data-include="/partials/footer.html"></div>
+  <script src="/include.js" defer></script>
 </body>
 </html>
