--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Contact / Join — System & Flow</title>
+  <meta name="description" content="Contact System & Flow or join the list for updates and specials." />
   <link rel="stylesheet" href="/styles.css" />
   <link rel="icon" href="/favicon.ico" />
   <style>
@@ -19,83 +20,87 @@
   </style>
 </head>
 <body class="dark">
+
+  <!-- Header / Navbar -->
   <header class="wrap header">
     <div class="brand">
-      <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+      <a href="/index.html">
+        <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+      </a>
       <span class="brand-name">System &amp; Flow</span>
     </div>
     <nav class="nav">
-      <a href="/">Home</a>
+      <a href="/index.html">Home</a>
       <a href="/apps.html">Apps</a>
       <a href="/contact.html">Contact</a>
     </nav>
   </header>
 
+  <!-- Intro -->
   <main class="wrap hero" style="padding:60px 20px 14px">
     <h1>Contact / Join the List</h1>
     <p class="sub">Get launch news, specials, and coupons. Opt out anytime.</p>
   </main>
 
+  <!-- Form -->
   <section class="wrap form-wrap">
-<form id="contact-form" action="https://formspree.io/f/mzzvlwqy" method="POST" class="form">
-  <label>Name
-    <input type="text" name="name" required />
-  </label>
+    <form id="contact-form" action="https://formspree.io/f/mzzvlwqy" method="POST">
+      <label>Name
+        <input type="text" name="name" required />
+      </label>
 
-  <label>Email
-    <input type="email" name="email" required />
-  </label>
+      <label>Email
+        <input type="email" name="email" required />
+      </label>
 
-  <label>Message
-    <textarea name="message" rows="5" required></textarea>
-  </label>
+      <label>Message
+        <textarea name="message" rows="5" required></textarea>
+      </label>
 
-  <label class="consent">
-    <input type="checkbox" name="marketing_consent" />
-    I agree to receive follow-ups about this inquiry.
-  </label>
+      <label class="consent">
+        <input type="checkbox" name="marketing_consent" />
+        I agree to receive follow‑ups about this inquiry.
+      </label>
 
-  <!-- Honeypot -->
-  <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
+      <!-- Anti-bot honeypot -->
+      <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
 
-  <!-- Optional metadata -->
-  <input type="hidden" name="_subject" value="New contact — systemnflow.com" />
+      <!-- Optional metadata (no redirect; we’ll show inline success) -->
+      <input type="hidden" name="_subject" value="New contact — systemnflow.com" />
 
-  <div class="actions">
-    <button class="btn primary" type="submit">Send</button>
-  </div>
-</form>
+      <button class="btn primary" type="submit">Send</button>
+    </form>
 
-<div id="contact-success" class="success">
-  ✅ Thanks for reaching out! We’ll reply soon.
-</div>
-
-
-
+    <div id="contact-success" class="success">
+      ✅ Thanks for reaching out! We’ll reply soon.
+    </div>
   </section>
 
-<div data-include="/partials/footer.html"></div>
-<script src="/include.js" defer></script>
-<script>
-document.getElementById("contact-form").addEventListener("submit", async function(e) {
-  e.preventDefault();
-  const form = e.target;
-  const data = new FormData(form);
-  const response = await fetch(form.action, {
-    method: form.method,
-    body: data,
-    headers: { 'Accept': 'application/json' }
-  });
+  <!-- Footer -->
+  <div data-include="/partials/footer.html"></div>
+  <script src="/include.js" defer></script>
 
-  if (response.ok) {
-    form.style.display = "none"; // hide form
-    document.getElementById("contact-success").style.display = "block"; // show success box
-  } else {
-    alert("Oops! Something went wrong. Please try again.");
-  }
-});
-</script>
-
-
+  <!-- Inline success (prevents redirect) -->
+  <script>
+    const cf = document.getElementById("contact-form");
+    if (cf) {
+      cf.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const form = e.target;
+        const data = new FormData(form);
+        const resp = await fetch(form.action, {
+          method: form.method,
+          body: data,
+          headers: { 'Accept': 'application/json' }
+        });
+        if (resp.ok) {
+          form.style.display = "none";
+          document.getElementById("contact-success").style.display = "block";
+        } else {
+          alert("Oops! Something went wrong. Please try again.");
+        }
+      });
+    }
+  </script>
 </body>
 </html>
